tests/NormalTests/paczka1/small_fuzzy/79743605.err
Error in line 3: S997 S997 64,2
Error in line 6: S997 S613 736,5
Error in line 7: S997 S930 0,9
Error in line 9: S997 S285 64,8
Error in line 2: nuFhdQO S930 6,9
Error in line 13: nuFhdQO S613 75,6
